--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,6 +1,11 @@
+:root{
+    --gradient-firstPage : linear-gradient(180deg, #39B7FF 0%, #9F7BE1 63.54%, #BB6BD9 100%);
+    --gradient-secondPage : linear-gradient(180deg, #BB6BD9 0%, #FB00C3 99.99%, #BB6BD9 100%);
+}
+
 body {
     /* background :#866FD7; */
-    background: linear-gradient(180deg, #39B7FF 0%, #9F7BE1 63.54%, #BB6BD9 100%);
+    background: var(--gradient-firstPage);
     font-family: 'Roboto', sans-serif;
     color: #333333;
 }
