--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,33 +1,35 @@
-:root{
-    --gradient-firstPage : linear-gradient(180deg, #39B7FF 0%, #9F7BE1 63.54%, #BB6BD9 100%);
-    --gradient-secondPage : linear-gradient(180deg, #BB6BD9 0%, #FB00C3 99.99%, #BB6BD9 100%);
+:root {
+    --gradient-firstPage: linear-gradient(180deg, #39B7FF 0%, #9F7BE1 63.54%, #BB6BD9 100%);
+    --gradient-secondPage: linear-gradient(180deg, #BB6BD9 0%, #FB00C3 99.99%, #BB6BD9 100%);
+    --box-shadow: #00000025 0 0 100px;
+    --soft-black: #333333;
+    --white-bone: #f2f2f2;
 }
 
 body {
     /* background :#866FD7; */
-    background: var(--gradient-firstPage);
     font-family: 'Roboto', sans-serif;
-    color: #333333;
+    color: var(--soft-black);
+}
+
+body.page1 {
+    background: var(--gradient-firstPage);
+}
+
+body.page2 {
+    background: var(--gradient-secondPage);
 }
 
 h2 {
     margin: 20px 0;
 }
 
-footer {
-    box-shadow: #00000025 0 0 100px;
-    border-radius: 15px 15px 0 0;
-    padding: 100px;
-    background: #333333;
-    margin: 0 150px;
-}
-
 .myContainer {
-    box-shadow: #00000025 0 0 100px;
+    box-shadow: var(--box-shadow);
     border-radius: 15px;
     padding: 100px;
     margin: 150px 0;
-    background: #F2F2F2;
+    background: var(--white-bone);
 }
 
 .missed {
