--- a/src/style/main.css
+++ b/src/style/main.css
@@ -33,6 +33,12 @@ h2 {
     background: var(--white-bone);
 }
 
+.image-arrow {
+    margin-left:10px;
+    width: 16px;
+    height: auto;
+}
+
 .missed {
     background: #F16D95;
     color: #94002D;
